--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,12 +118,16 @@ set(cross_platform_targets
         src/inventory_screen/display/gui/gui.h
         src/inventory_screen/display/cli/cli.c
         src/inventory_screen/display/cli/cli.h
+        src/shop_screen/display/gui/gui.c
+        src/shop_screen/display/gui/gui.h
 )
 
 # for unix
 set(unix_targets
         src/ui_utils/cli_utils/cli_utils_unix.c
         src/ui_utils/cli_utils/cli_text/cli_text_unix.c
+        src/shop_screen/display/cli/cli.c
+        src/shop_screen/display/cli/cli.h
 )
 
 # for windows
