--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,8 @@ set(cross_platform_targets
         src/new_game_screen/display/display.c
         src/load_game_screen/load_game_screen.h
         src/load_game_screen/load_game_screen.c
+        src/load_game_screen/delete_game_screen.c
+        src/load_game_screen/delete_game_screen.h
         src/load_game_screen/display/display.h
         src/load_game_screen/display/display.c
         src/ui_utils/cli_utils/cli_text/cli_text.h
